fix map not showing in chrome add key prop when using map

--- a/components/ContactSection/contactSection.scss
+++ b/components/ContactSection/contactSection.scss
@@ -9,5 +9,6 @@
 }
 
 .map{
+  height: inherit;
   flex-grow: 2;
 }
